# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.8
#

2005-04-18 12:14:35 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-81

    Summary:
      resources, fix 'get_mimetype'
    Revision:
      itools--main--0.8--patch-81


    modified files:
     Changelog resources/base.py


2005-04-18 10:16:07 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-80

    Summary:
      get ready to release 0.8.0
    Revision:
      itools--main--0.8--patch-80


    modified files:
     CHANGES.txt Changelog README.txt setup.py


2005-04-17 19:43:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-79

    Summary:
      catalog, optimize indexation
    Revision:
      itools--main--0.8--patch-79


    modified files:
     Changelog catalog/Catalog.py


2005-04-17 19:32:07 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-78

    Summary:
      catalog, fix save
    Revision:
      itools--main--0.8--patch-78


    modified files:
     Changelog catalog/Catalog.py


2005-04-17 19:22:45 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-77

    Summary:
      handlers, fix folder's interaction with transactions
    Revision:
      itools--main--0.8--patch-77

    Now a folder is stored in the transaction (methods 'set_handler'
    and 'del_handler'), only if it has been really changed. This is
    to say, if there has not been an error.

    modified files:
     Changelog handlers/Folder.py


2005-04-17 19:20:23 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-76

    Summary:
      handlers, now 'save' is atomic
    Revision:
      itools--main--0.8--patch-76

    Now the method 'save' locks the transaction, i.e. it is atomic.
    Also, the handler being saved is removed from the transaction
    (if it is being saved to its associated resource).

    modified files:
     Changelog handlers/Handler.py handlers/transactions.py


2005-04-15 13:36:56 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-75

    Summary: