@@ -441,7 +441,9 @@ class STL(object):
 
         # Get the document
         document = self.handler
-        s = self.process(document.root_element, stack, repeat)
+        s = []
+        s.append(document.header_to_unicode())
+        s.extend(self.process(document.root_element, stack, repeat))
 
         return u''.join(s)
 
